Add daily summary capabilities
